--- a/Store.Service/Store.Service.csproj
+++ b/Store.Service/Store.Service.csproj
@@ -68,6 +68,161 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Implementation\AdminService.cs" />
+    <Compile Include="Implementation\AffaireService.cs" />
+    <Compile Include="Implementation\ArticlesKitService.cs" />
+    <Compile Include="Implementation\ArticlesPrixService.cs" />
+    <Compile Include="Implementation\ArticlesService.cs" />
+    <Compile Include="Implementation\CategorieService.cs" />
+    <Compile Include="Implementation\CodesTVASevice.cs" />
+    <Compile Include="Implementation\DepotService.cs" />
+    <Compile Include="Implementation\DevisesService.cs" />
+    <Compile Include="Implementation\DoclieartService.cs" />
+    <Compile Include="Implementation\DoclieService.cs" />
+    <Compile Include="Implementation\DocumentCommercialService.cs" />
+    <Compile Include="Implementation\DossiersContactsService.cs" />
+    <Compile Include="Implementation\DossiersService.cs" />
+    <Compile Include="Implementation\FamilleService.cs" />
+    <Compile Include="Implementation\FournisseurArticleService.cs" />
+    <Compile Include="Implementation\GedService.cs" />
+    <Compile Include="Implementation\ImpressionService.cs" />
+    <Compile Include="Implementation\LicenceService.cs" />
+    <Compile Include="Implementation\MarqueService.cs" />
+    <Compile Include="Implementation\MotifService.cs" />
+    <Compile Include="Implementation\MotifTicketService.cs" />
+    <Compile Include="Implementation\MouvementStockService.cs" />
+    <Compile Include="Implementation\NomenclatureService.cs" />
+    <Compile Include="Implementation\NumerotationService.cs" />
+    <Compile Include="Implementation\ObjectifService.cs" />
+    <Compile Include="Implementation\OpportuniteService.cs" />
+    <Compile Include="Implementation\ParametrageComptableService.cs" />
+    <Compile Include="Implementation\PeriodeService.cs" />
+    <Compile Include="Implementation\ReglementFactureService.cs" />
+    <Compile Include="Implementation\ReglementService.cs" />
+    <Compile Include="Implementation\RepresentantService.cs" />
+    <Compile Include="Implementation\TicketDetailService.cs" />
+    <Compile Include="Implementation\TicketService.cs" />
+    <Compile Include="Implementation\TiersContactsService.cs" />
+    <Compile Include="Implementation\TiersService.cs" />
+    <Compile Include="Implementation\ToleranceService.cs" />
+    <Compile Include="Implementation\TypePaiementDetailService.cs" />
+    <Compile Include="Implementation\TypePaiementService.cs" />
+    <Compile Include="Implementation\UniteService.cs" />
+    <Compile Include="Interface\IAdminService.cs" />
+    <Compile Include="Interface\IAffaireService.cs" />
+    <Compile Include="Interface\IArticlesKitService.cs" />
+    <Compile Include="Interface\IArticlesPrixService.cs" />
+    <Compile Include="Interface\IArticlesService.cs" />
+    <Compile Include="Interface\ICategorieService.cs" />
+    <Compile Include="Interface\ICodesTVAService.cs" />
+    <Compile Include="Interface\IDepotService.cs" />
+    <Compile Include="Interface\IDevisesService.cs" />
+    <Compile Include="Interface\IDoclieartService.cs" />
+    <Compile Include="Interface\IDoclieService.cs" />
+    <Compile Include="Interface\IDocumentCommercialDetailSerieService.cs" />
+    <Compile Include="Interface\IDocumentCommercialDetailService.cs" />
+    <Compile Include="Interface\IDocumentCommercialService.cs" />
+    <Compile Include="Interface\IDossiersContactsService.cs" />
+    <Compile Include="Interface\IDossiersService.cs" />
+    <Compile Include="Interface\IFamilleService.cs" />
+    <Compile Include="Interface\IFournisseurArticleService.cs" />
+    <Compile Include="Interface\IGedService.cs" />
+    <Compile Include="Interface\IImpressionService.cs" />
+    <Compile Include="Interface\ILicenceService.cs" />
+    <Compile Include="Interface\IMarqueService.cs" />
+    <Compile Include="Interface\IMotifService.cs" />
+    <Compile Include="Interface\IMotifTicketService.cs" />
+    <Compile Include="Interface\IMouvementStockService.cs" />
+    <Compile Include="Interface\INomenclatureService.cs" />
+    <Compile Include="Interface\INumerotationService.cs" />
+    <Compile Include="Interface\IObjectifService.cs" />
+    <Compile Include="Interface\IOpportuniteService.cs" />
+    <Compile Include="Interface\IParametrageComptableService.cs" />
+    <Compile Include="Interface\IPeriodeService.cs" />
+    <Compile Include="Interface\IReglementFactureService.cs" />
+    <Compile Include="Interface\IReglementService.cs" />
+    <Compile Include="Interface\IRepresentantService.cs" />
+    <Compile Include="Interface\ITicketDetailService.cs" />
+    <Compile Include="Interface\ITicketService.cs" />
+    <Compile Include="Interface\ITiersContactsService.cs" />
+    <Compile Include="Interface\ITiersService.cs" />
+    <Compile Include="Interface\IToleranceService.cs" />
+    <Compile Include="Interface\ITypePaiementDetailService.cs" />
+    <Compile Include="Interface\ITypePaiementService.cs" />
+    <Compile Include="Interface\IUniteService.cs" />
+    <Compile Include="Pivot\DocumentsPivot.cs" />
+    <Compile Include="Pivot\DossiersSitesPivot.cs" />
+    <Compile Include="Pivot\ExercicesPivot.cs" />
+    <Compile Include="Pivot\FournisseurArticlePivot.cs" />
+    <Compile Include="Pivot\GedPivot.cs" />
+    <Compile Include="Pivot\ImpressionPivot.cs" />
+    <Compile Include="Pivot\ItemsPivot.cs" />
+    <Compile Include="Pivot\LicencePivot.cs" />
+    <Compile Include="Pivot\MarquePivot.cs" />
+    <Compile Include="Pivot\ModelPivot.cs" />
+    <Compile Include="Pivot\MotifPivot.cs" />
+    <Compile Include="Pivot\MotifTicketPivot.cs" />
+    <Compile Include="Pivot\MouvementStockPivot.cs" />
+    <Compile Include="Pivot\NomenclaturePivot.cs" />
+    <Compile Include="Pivot\NumerationPivot.cs" />
+    <Compile Include="Pivot\NumerotationPivot.cs" />
+    <Compile Include="Pivot\ObjectifPivot.cs" />
+    <Compile Include="Pivot\OpportuniteDetailPivot.cs" />
+    <Compile Include="Pivot\OpportunitePivot.cs" />
+    <Compile Include="Pivot\PeriodePivot.cs" />
+    <Compile Include="Pivot\PeriodesPivot.cs" />
+    <Compile Include="Pivot\PivotAdmin.cs" />
+    <Compile Include="Pivot\PivotAffaire.cs" />
+    <Compile Include="Pivot\PivotArticles.cs" />
+    <Compile Include="Pivot\PivotArticlesKit.cs" />
+    <Compile Include="Pivot\PivotArticlesPrix.cs" />
+    <Compile Include="Pivot\PivotCategorie.cs" />
+    <Compile Include="Pivot\PivotClasse.cs" />
+    <Compile Include="Pivot\PivotCodesTVA.cs" />
+    <Compile Include="Pivot\PivotCompteG.cs" />
+    <Compile Include="Pivot\PivotCompteGDetailTVA.cs" />
+    <Compile Include="Pivot\PivotComptesBancaires.cs" />
+    <Compile Include="Pivot\PivotComptesBancairesTiers.cs" />
+    <Compile Include="Pivot\PivotDepot.cs" />
+    <Compile Include="Pivot\PivotDevises.cs" />
+    <Compile Include="Pivot\PivotDoclie.cs" />
+    <Compile Include="Pivot\PivotDoclieart.cs" />
+    <Compile Include="Pivot\PivotDocumentCommercial.cs" />
+    <Compile Include="Pivot\PivotDocumentCommercialDetail.cs" />
+    <Compile Include="Pivot\PivotDocumentCommercialDetailSerie.cs" />
+    <Compile Include="Pivot\PivotDossiers.cs" />
+    <Compile Include="Pivot\PivotDossiersContacts.cs" />
+    <Compile Include="Pivot\PivotEcheances.cs" />
+    <Compile Include="Pivot\PivotEcritures.cs" />
+    <Compile Include="Pivot\PivotFamille.cs" />
+    <Compile Include="Pivot\PivotImpression.cs" />
+    <Compile Include="Pivot\PivotJournaux.cs" />
+    <Compile Include="Pivot\PivotLettrage.cs" />
+    <Compile Include="Pivot\PivotLicence.cs" />
+    <Compile Include="Pivot\PivotMarque.cs" />
+    <Compile Include="Pivot\PivotOperation.cs" />
+    <Compile Include="Pivot\PivotParametrageComptable.cs" />
+    <Compile Include="Pivot\PivotPieces.cs" />
+    <Compile Include="Pivot\PivotPlanAnalytique.cs" />
+    <Compile Include="Pivot\PivotRelevesBancaires.cs" />
+    <Compile Include="Pivot\PivotRelevesBancairesDetail.cs" />
+    <Compile Include="Pivot\PivotTiers.cs" />
+    <Compile Include="Pivot\PivotTiersContacts.cs" />
+    <Compile Include="Pivot\PivotTolerance.cs" />
+    <Compile Include="Pivot\PivotTVALettrage.cs" />
+    <Compile Include="Pivot\PivotTypePaiement.cs" />
+    <Compile Include="Pivot\PivotTypePaiementDetail.cs" />
+    <Compile Include="Pivot\PivotUnite.cs" />
+    <Compile Include="Pivot\PreferencesPivot.cs" />
+    <Compile Include="Pivot\RegelementPivot.cs" />
+    <Compile Include="Pivot\ReglementFacturePivot.cs" />
+    <Compile Include="Pivot\ReglementPivot.cs" />
+    <Compile Include="Pivot\RepresentantPivot.cs" />
+    <Compile Include="Pivot\SocietesPivot.cs" />
+    <Compile Include="Pivot\TicketDetailPivot.cs" />
+    <Compile Include="Pivot\TicketPivot.cs" />
+    <Compile Include="Pivot\TolerancePivot.cs" />
+    <Compile Include="Pivot\UnitePivot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
